--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -126,7 +126,6 @@
     <ClInclude Include="..\appframework\iappsystem.h" />
     <ClInclude Include="..\bsplib\bsplib.h" />
     <ClInclude Include="..\client\cdll_engine_int.h" />
-    <ClInclude Include="..\client\client.h" />
     <ClInclude Include="..\client\vengineclient_impl.h" />
     <ClInclude Include="..\common\igameserverdata.h" />
     <ClInclude Include="..\common\netmessages.h" />
@@ -146,10 +145,9 @@
     <ClInclude Include="..\datacache\imdlcache.h" />
     <ClInclude Include="..\datacache\mdlcache.h" />
     <ClInclude Include="..\ebisusdk\EbisuSDK.h" />
-    <ClInclude Include="..\engine\baseclient.h" />
-    <ClInclude Include="..\engine\baseserver.h" />
+    <ClInclude Include="..\engine\client\client.h" />
+    <ClInclude Include="..\engine\client\cl_main.h" />
     <ClInclude Include="..\engine\clockdriftmgr.h" />
-    <ClInclude Include="..\engine\cl_main.h" />
     <ClInclude Include="..\engine\cmodel_bsp.h" />
     <ClInclude Include="..\engine\common.h" />
     <ClInclude Include="..\engine\datablock.h" />
@@ -163,8 +161,9 @@
     <ClInclude Include="..\engine\net.h" />
     <ClInclude Include="..\engine\net_chan.h" />
     <ClInclude Include="..\engine\packed_entity.h" />
-    <ClInclude Include="..\engine\sv_main.h" />
-    <ClInclude Include="..\engine\sv_rcon.h" />
+    <ClInclude Include="..\engine\server\server.h" />
+    <ClInclude Include="..\engine\server\sv_main.h" />
+    <ClInclude Include="..\engine\server\sv_rcon.h" />
     <ClInclude Include="..\engine\sys_dll.h" />
     <ClInclude Include="..\engine\sys_dll2.h" />
     <ClInclude Include="..\engine\sys_engine.h" />
@@ -218,7 +217,6 @@
     <ClInclude Include="..\rtech\rui\rui.h" />
     <ClInclude Include="..\rtech\stryder\stryder.h" />
     <ClInclude Include="..\server\vengineserver_impl.h" />
-    <ClInclude Include="..\server\server.h" />
     <ClInclude Include="..\squirrel\sqapi.h" />
     <ClInclude Include="..\squirrel\sqinit.h" />
     <ClInclude Include="..\squirrel\sqstate.h" />
@@ -438,8 +436,7 @@
     <ClCompile Include="..\core\termutil.cpp" />
     <ClCompile Include="..\datacache\mdlcache.cpp" />
     <ClCompile Include="..\ebisusdk\EbisuSDK.cpp" />
-    <ClCompile Include="..\engine\baseclient.cpp" />
-    <ClCompile Include="..\engine\baseserver.cpp" />
+    <ClCompile Include="..\engine\client\client.cpp" />
     <ClCompile Include="..\engine\clockdriftmgr.cpp" />
     <ClCompile Include="..\engine\cmodel_bsp.cpp" />
     <ClCompile Include="..\engine\common.cpp" />
@@ -448,8 +445,9 @@
     <ClCompile Include="..\engine\modelloader.cpp" />
     <ClCompile Include="..\engine\net.cpp" />
     <ClCompile Include="..\engine\net_chan.cpp" />
-    <ClCompile Include="..\engine\sv_main.cpp" />
-    <ClCompile Include="..\engine\sv_rcon.cpp" />
+    <ClCompile Include="..\engine\server\server.cpp" />
+    <ClCompile Include="..\engine\server\sv_main.cpp" />
+    <ClCompile Include="..\engine\server\sv_rcon.cpp" />
     <ClCompile Include="..\engine\sys_dll.cpp" />
     <ClCompile Include="..\engine\sys_dll2.cpp" />
     <ClCompile Include="..\engine\sys_engine.cpp" />
@@ -488,7 +486,6 @@
     <ClCompile Include="..\rtech\rtech_game.cpp" />
     <ClCompile Include="..\rtech\stryder\stryder.cpp" />
     <ClCompile Include="..\server\vengineserver_impl.cpp" />
-    <ClCompile Include="..\server\server.cpp" />
     <ClCompile Include="..\squirrel\sqapi.cpp" />
     <ClCompile Include="..\squirrel\sqinit.cpp" />
     <ClCompile Include="..\squirrel\sqstdaux.cpp" />
