--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -522,6 +522,9 @@
     <ClCompile Include="..\engine\client\cl_rcon.cpp">
       <Filter>sdk\engine\client</Filter>
     </ClCompile>
+    <ClCompile Include="..\engine\networkstringtable.cpp">
+      <Filter>sdk\engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1525,6 +1528,12 @@
     </ClInclude>
     <ClInclude Include="..\engine\client\cl_main.h">
       <Filter>sdk\engine\client</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\networkstringtable.h">
+      <Filter>sdk\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\include\iserver.h">
+      <Filter>sdk\public\include</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
