--- a/r5dev/vproj/sdklauncher.vcxproj
+++ b/r5dev/vproj/sdklauncher.vcxproj
@@ -127,6 +127,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\public\utility.cpp" />
+    <ClCompile Include="..\sdklauncher\basepanel.cpp" />
     <ClCompile Include="..\sdklauncher\sdklauncher.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -139,6 +140,7 @@
   <ItemGroup>
     <ClInclude Include="..\core\stdafx.h" />
     <ClInclude Include="..\public\include\utility.h" />
+    <ClInclude Include="..\sdklauncher\basepanel.h" />
     <ClInclude Include="..\sdklauncher\sdklauncher.h" />
     <ClInclude Include="..\sdklauncher\sdklauncher_res.h" />
     <ClInclude Include="..\thirdparty\detours\include\detours.h" />
