--- a/r5dev/vproj/sdklauncher.vcxproj.filters
+++ b/r5dev/vproj/sdklauncher.vcxproj.filters
@@ -1,76 +1,86 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="ui">
+      <UniqueIdentifier>{ce3f4cd9-6eb2-4133-b109-869c24225000}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
+    <Filter Include="core">
+      <UniqueIdentifier>{9dcfc3ae-597b-4e7a-8e51-11e438faa7f6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Resource Files">
+    <Filter Include="public">
+      <UniqueIdentifier>{ba246dd9-0473-49d6-8cc0-64330570b81f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="launcher">
+      <UniqueIdentifier>{c593f57d-6b04-46e8-8778-02dcafaf969c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="resource">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Detours Files">
+    <Filter Include="thirdparty">
+      <UniqueIdentifier>{b9c3ead5-38a0-4e31-8446-df55ebcbdb66}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="thirdparty\detours">
       <UniqueIdentifier>{82b18787-373d-42ce-8d8d-1e3adba8d3a0}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Detours Files\include">
+    <Filter Include="thirdparty\detours\include">
       <UniqueIdentifier>{dc968871-7ca2-452b-a5b1-350a12dd54aa}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\sdklauncher\sdklauncher.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\core\stdafx.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>core</Filter>
     </ClCompile>
     <ClCompile Include="..\public\utility.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>public</Filter>
     </ClCompile>
     <ClCompile Include="..\sdklauncher\basepanel.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>ui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\sdklauncher\sdklauncher.cpp">
+      <Filter>launcher</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\resource\sdklauncher.rc">
-      <Filter>Resource Files</Filter>
+      <Filter>resource</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\core\stdafx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\sdklauncher\sdklauncher.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\sdklauncher\sdklauncher_res.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\thirdparty\detours\include\detver.h">
-      <Filter>Detours Files\include</Filter>
+      <Filter>thirdparty\detours\include</Filter>
     </ClInclude>
     <ClInclude Include="..\thirdparty\detours\include\syelog.h">
-      <Filter>Detours Files\include</Filter>
+      <Filter>thirdparty\detours\include</Filter>
     </ClInclude>
     <ClInclude Include="..\thirdparty\detours\include\detours.h">
-      <Filter>Detours Files\include</Filter>
+      <Filter>thirdparty\detours\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\stdafx.h">
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\public\include\utility.h">
-      <Filter>Header Files</Filter>
+      <Filter>public</Filter>
     </ClInclude>
     <ClInclude Include="..\sdklauncher\basepanel.h">
-      <Filter>Header Files</Filter>
+      <Filter>ui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\sdklauncher\sdklauncher.h">
+      <Filter>launcher</Filter>
+    </ClInclude>
+    <ClInclude Include="..\sdklauncher\sdklauncher_res.h">
+      <Filter>launcher</Filter>
+    </ClInclude>
+    <ClInclude Include="..\sdklauncher\sdklauncher_const.h">
+      <Filter>launcher</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\resource\ico\sdklauncher_rel.ico">
-      <Filter>Resource Files</Filter>
+      <Filter>resource</Filter>
     </Image>
     <Image Include="..\resource\ico\sdklauncher_dbg.ico">
-      <Filter>Resource Files</Filter>
+      <Filter>resource</Filter>
     </Image>
   </ItemGroup>
 </Project>
