--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -528,6 +528,9 @@
     <ClCompile Include="..\tier0\dbg.cpp">
       <Filter>sdk\tier0</Filter>
     </ClCompile>
+    <ClCompile Include="..\tier1\strtools.cpp">
+      <Filter>sdk\tier1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1551,6 +1554,12 @@
       <Filter>sdk\tier0</Filter>
     </ClInclude>
     <ClInclude Include="..\tier0\dbgflag.h">
+      <Filter>sdk\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\tier1\strtools.h">
+      <Filter>sdk\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\tier0\commonmacros.h">
       <Filter>sdk\tier0</Filter>
     </ClInclude>
   </ItemGroup>
